# rrt_connect_hsr

./: CMakeLists.txt  README.md  package.xml
hsr/: BUILD.bazel  README.md  hsr.cc
robots/: hsrb.urdf  hsrb4s_arm.obj.urdf  hsrb4s_backup.obj.urdf  hsrb_pub_release.urdf
robots/hsrb_description/meshes/arm_v0/: arm_flex_light.obj.mtl
robots/hsrb_description/meshes/base_v2/: body_light.obj.mtl
robots/hsrb_description/meshes/hand_v0/: l_distal.obj.mtl  palm_light.obj.mtl  r_distal.obj.mtl
robots/hsrb_description/meshes/head_v1/: tablet_base.obj.mtl
robots/hsrb_description/meshes/sensors/: head_camera.obj.mtl
robots/hsrb_parts_description/meshes/sensors/: xtion.obj.mtl
scripts/: HSR_arm_RRT.py  forward_kinematics.py  hsr_gripper_rrt_planner.py  inverse_kinematics.py  simple_arm_controller_RRT.py  simple_arm_controller_rrt.py
srv/: drake_fk.srv  drake_ik.srv
